kubernetes/apps/namo-apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: namo-apps
spec:
  selector:
    app: n8n
  ports:
    - port: 80
      targetPort: 5678
